--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     ],
     "autoload": {
         "psr-4": {
-            "Pure\\": "src/"
+            "Pure\\": "src/",
+            "Pure\\Utils\\": "utils/"
         }
     },
     "require": {
@@ -17,6 +18,10 @@
         "symfony/console": "~2.4",
         "symfony/expression-language": "~2.4"
     },
+    "require-dev": {
+        "symfony/finder": "~2.4"
+    },
+    "bin": ["pure"],
     "license": "MIT",
     "minimum-stability": "dev"
 }
