--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "Pure\\": "src/",
-            "Pure\\Utils\\": "utils/"
+            "Pure\\": "src/"
         }
     },
     "require": {
@@ -19,7 +18,8 @@
         "symfony/expression-language": "~2.4"
     },
     "require-dev": {
-        "symfony/finder": "~2.4"
+        "symfony/finder": "~2.4",
+        "kherge/amend": "~3.0"
     },
     "bin": ["pure"],
     "license": "MIT",
