--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     "require": {
         "react/react": "~0.4",
         "symfony/console": "~2.4",
-        "symfony/expression-language": "~2.4"
+        "symfony/expression-language": "~2.4",
+        "symfony/debug": "~2.4"
     },
     "require-dev": {
         "symfony/finder": "~2.4",
