--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Pure PHP key-value storage",
     "authors": [
         {
-            "name": "Elfet",
+            "name": "Anton Medvedev",
             "email": "anton@elfet.ru"
         }
     ],
@@ -14,13 +14,13 @@
     },
     "require": {
         "react/react": "~0.4",
-        "symfony/console": "~2.4",
-        "symfony/expression-language": "~2.4",
-        "symfony/debug": "~2.4"
+        "symfony/console": "~2.6",
+        "symfony/expression-language": "~2.6",
+        "symfony/debug": "~2.6"
     },
     "require-dev": {
-        "symfony/finder": "~2.4",
-        "kherge/amend": "~3.0"
+        "symfony/finder": "~2.6",
+        "phpunit/phpunit": "~4.4"
     },
     "bin": ["pure"],
     "license": "MIT",
