--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,5 @@ php:
   - 5.6
   - hhvm
 
-before_script:
-  - composer self-update
-  - composer install --no-interaction --prefer-source --dev
-
-script:
-  - phpunit
+install:
+  - composer --dev --prefer-source --no-interaction install
