--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
     },
     "require-dev": {
         "symfony/finder": "~2.6",
-        "phpunit/phpunit": "~4.4"
+        "phpunit/phpunit": "~4.4",
+        "symfony/process": "~2.6"
     },
     "bin": ["pure"],
     "license": "MIT",
