--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,16 @@ php:
   - 5.4
   - 5.5
   - 5.6
+  - hhvm
+  - hhvm-nightly
+
+matrix:
+  allow_failures:
+    - php: hhvm
+    - php: hhvm-nightly
 
 install:
   - composer --dev --prefer-source --no-interaction install
+
+script:
+  - phpunit --coverage-text
