correct bc for symfony3 upgrade

--- a/composer.json
+++ b/composer.json
@@ -14,14 +14,14 @@
     },
     "require": {
         "react/react": "~0.4",
-        "symfony/console": "2.6 - 3.0",
-        "symfony/expression-language": "2.6 - 3.0",
-        "symfony/debug": "2.6 - 3.0"
+        "symfony/console": "~2.6|~3.0",
+        "symfony/expression-language": "~2.6|~3.0",
+        "symfony/debug": "~2.6|~3.0"
     },
     "require-dev": {
-        "symfony/finder": "2.6 - 3.0",
+        "symfony/finder": "~2.6|~3.0",
         "phpunit/phpunit": "~4.4",
-        "symfony/process": "2.6 - 3.0"
+        "symfony/process": "~2.6|~3.0"
     },
     "bin": ["pure"],
     "license": "MIT",
