--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: php
 
 php:
-  - 5.4
   - 5.5
   - 5.6
   - hhvm
@@ -12,8 +11,13 @@ matrix:
     - php: hhvm
     - php: hhvm-nightly
 
+env:
+  matrix:
+    - COMPOSER_FLAGS="--prefer-lowest"
+    - COMPOSER_FLAGS="--prefer-stable"
+
 install:
-  - composer --dev --prefer-source --no-interaction install
+  - composer update --dev --prefer-source --no-interaction $COMPOSER_FLAGS
 
 script:
   - phpunit --coverage-text
