--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "authors": [
         {
             "name": "Anton Medvedev",
-            "email": "anton@elfet.ru"
+            "email": "anton@medv.io"
         }
     ],
     "autoload": {
@@ -14,14 +14,14 @@
     },
     "require": {
         "react/react": "~0.4",
-        "symfony/console": "~2.6",
-        "symfony/expression-language": "~2.6",
-        "symfony/debug": "~2.6"
+        "symfony/console": "~2.6|~3.0",
+        "symfony/expression-language": "~2.6|~3.0",
+        "symfony/debug": "~2.6|~3.0"
     },
     "require-dev": {
-        "symfony/finder": "~2.6",
-        "phpunit/phpunit": "~4.4",
-        "symfony/process": "~2.6"
+        "symfony/finder": "~2.6|~3.0",
+        "symfony/process": "~2.6|~3.0",
+        "phpunit/phpunit": "~4.4"
     },
     "bin": ["pure"],
     "license": "MIT",
